# tesseract-ocr-cmake

./: CMakeLists.txt  Usetesseract.cmake.in  tesseractConfig.cmake.in
api/: CMakeLists.txt
ccmain/: CMakeLists.txt
ccstruct/: CMakeLists.txt
ccutil/: CMakeLists.txt  platform.h
classify/: CMakeLists.txt
cmake/Modules/: MergeStaticLibraries.cmake
cube/: CMakeLists.txt
cutil/: CMakeLists.txt
dict/: CMakeLists.txt
msvsport/: CMakeLists.txt
neural_networks/runtime/: CMakeLists.txt
opencl/: CMakeLists.txt
textord/: CMakeLists.txt
training/: CMakeLists.txt
viewer/: CMakeLists.txt
wordrec/: CMakeLists.txt  language_model.cpp
